Fix overflow issue

--- a/next/components/GuestLayout/index.module.css
+++ b/next/components/GuestLayout/index.module.css
@@ -114,4 +114,5 @@
 .results {
   flex-basis: 100%;
   padding: var(--mantine-spacing-lg);
+  max-width: 100%;
 }
